Fix YouTube image-card layout
The YouTube card image overlapped with the text, removing the "tricks" fixes the rendering issue and no longer appears to be required.

The approach used here was originally used to help improve keyboard navigation when tabbing into the player, however this no longer appears to be an issue with the YouTube player on desktop screen sizes.

--- a/app/assets/stylesheets/govuk_publishing_components/components/_image-card.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_image-card.scss
@@ -259,56 +259,6 @@
   }
 }
 
-// The following two rules are used to 'trick' the
-// Youtube embed into using the desktop styles. Without
-// this, the Youtube embed will use mobile styles in
-// desktop viewports. The Youtube mobile styles are more
-// challenging to use with a keyboard as they are designed
-// for a touch screen interface. There is seemingly no way
-// to make an iframe request the desktop version of a site
-// and there is no parameter in the Youtube embed that would
-// force the desktop styles. Hence this workaround.
-
-// In the first rule, we are adding an arbitrarly large
-// enough px to the width of the Youtube iframe so that
-// it will use the desktop styling. Unfortunately, this width
-// would result in the Youtube embed overlapping into the
-// text content. To stop this happening, we scale the size of
-// the embed down.
-
-.gem-c-image-card__youtube-video-embed iframe {
-  @include govuk-media-query($from: tablet) {
-    transform: scale(.7);
-    width: calc(100% + 45px);
-  }
-  z-index: 1;
-}
-
-// In the second rule, we scale the container of the embed
-// up by the amount that we scaled the Youtube embed down.
-// This results in the embed being the correct size and the
-// desktop styles being used.
-
-.gem-c-image-card__youtube-video-embed {
-  @include govuk-media-query($from: tablet) {
-    transform: scale(1.3);
-  }
-  margin: 0;
-  padding-bottom: 68%;
-}
-
-// This rule is to reposition the embed to the correct
-// place in the image card. As the embed has been scaled
-// down and then scaled up again, it is misaligned and
-// here we correct that misalignment.
-
-.gem-c-image-card__youtube-video-embed.gem-c-govspeak__youtube-video iframe {
-  @include govuk-media-query($from: tablet) {
-    left: -22px;
-    top: -10px;
-  }
-}
-
 .gem-c-image-card__youtube-thumbnail-image-container {
   position: relative;
 
